--- a/about.html
+++ b/about.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>this is my first heading</h1>
+    <h1>this is my second heading</h1>
 </body>
 </html>
